{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1050,
  "lineage": "280c8c70-d253-0973-fa87-59b808b3c255",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_gtw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0980d59ddf1c38072",
            "association_id": "eipassoc-01e78f48fd09a080c",
            "domain": "vpc",
            "id": "eipalloc-0980d59ddf1c38072",
            "network_border_group": "us-east-1",
            "network_interface": "eni-080a6dfa7a4759753",
            "private_dns": "ip-10-0-2-90.ec2.internal",
            "private_ip": "10.0.2.90",
            "public_dns": "ec2-3-209-232-255.compute-1.amazonaws.com",
            "public_ip": "3.209.232.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_gtw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017ee975b82e3457d",
            "association_id": "eipassoc-062a31be4781198db",
            "domain": "vpc",
            "id": "eipalloc-017ee975b82e3457d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0461fda5961ab44ae",
            "private_dns": "ip-10-0-3-181.ec2.internal",
            "private_ip": "10.0.3.181",
            "public_dns": "ec2-44-213-163-42.compute-1.amazonaws.com",
            "public_ip": "44.213.163.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "int_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:internet-gateway/igw-0402d2bdb66cc9747",
            "id": "igw-0402d2bdb66cc9747",
            "owner_id": "467283722999",
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467283722999:loadbalancer/app/capstone-lb/3749eafde78d28d0",
            "arn_suffix": "app/capstone-lb/3749eafde78d28d0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "capstone-lb-1443386747.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:467283722999:loadbalancer/app/capstone-lb/3749eafde78d28d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "capstone-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d749d0e6da042bb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a78312f557cd77f"
              },
              {
                "subnet_id": "subnet-09295bbb3697fccb4"
              }
            ],
            "subnets": [
              "subnet-04a78312f557cd77f",
              "subnet-09295bbb3697fccb4"
            ],
            "tags": {
              "Name": "capstone-lb"
            },
            "tags_all": {
              "Name": "capstone-lb"
            },
            "vpc_id": "vpc-0d716f56ee76cd239",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467283722999:listener/app/capstone-lb/3749eafde78d28d0/82c7cff96926b444",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:467283722999:targetgroup/Demo-TargetGroup-tf/4a67a9fcc6a574b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:467283722999:listener/app/capstone-lb/3749eafde78d28d0/82c7cff96926b444",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:467283722999:loadbalancer/app/capstone-lb/3749eafde78d28d0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my-lb",
            "aws_lb_target_group.target-grp",
            "aws_security_group.alb_sg",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467283722999:targetgroup/Demo-TargetGroup-tf/4a67a9fcc6a574b0",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/4a67a9fcc6a574b0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:467283722999:targetgroup/Demo-TargetGroup-tf/4a67a9fcc6a574b0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0980d59ddf1c38072",
            "association_id": "eipassoc-01e78f48fd09a080c",
            "connectivity_type": "public",
            "id": "nat-083e77dafcc8d40c9",
            "network_interface_id": "eni-080a6dfa7a4759753",
            "private_ip": "10.0.2.90",
            "public_ip": "3.209.232.255",
            "subnet_id": "subnet-09295bbb3697fccb4"
          },
          "dependencies": [
            "aws_eip.eip_gtw_1",
            "aws_subnet.private_subnet2",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017ee975b82e3457d",
            "association_id": "eipassoc-062a31be4781198db",
            "connectivity_type": "public",
            "id": "nat-066e0bce9db6c3a30",
            "network_interface_id": "eni-0461fda5961ab44ae",
            "private_ip": "10.0.3.181",
            "public_ip": "44.213.163.42",
            "subnet_id": "subnet-0bd0211633dedea26"
          },
          "dependencies": [
            "aws_eip.eip_gtw_2",
            "aws_subnet.private_subnet3",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "mainProject",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:network-acl/acl-0a6ad4a0377e7f050",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0a6ad4a0377e7f050",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "467283722999",
            "subnet_ids": [
              "subnet-04a78312f557cd77f",
              "subnet-09295bbb3697fccb4",
              "subnet-0bd0211633dedea26"
            ],
            "tags": {
              "Name": "mainProject"
            },
            "tags_all": {
              "Name": "mainProject"
            },
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet2",
            "aws_subnet.private_subnet3",
            "aws_subnet.public_subnet1",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:route-table/rtb-0b532131f00c8cbf5",
            "id": "rtb-0b532131f00c8cbf5",
            "owner_id": "467283722999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083e77dafcc8d40c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_gtw_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_subnet.private_subnet2",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:route-table/rtb-0548f52e4ee64105f",
            "id": "rtb-0548f52e4ee64105f",
            "owner_id": "467283722999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066e0bce9db6c3a30",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_gtw_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_subnet.private_subnet3",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rou_tab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:route-table/rtb-0da8a0f349cc58c0c",
            "id": "rtb-0da8a0f349cc58c0c",
            "owner_id": "467283722999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0402d2bdb66cc9747",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.int_gtw",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081864f531381eb55",
            "route_table_id": "rtb-0b532131f00c8cbf5",
            "subnet_id": "subnet-09295bbb3697fccb4"
          },
          "dependencies": [
            "aws_eip.eip_gtw_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.private_subnet2",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1121792ebd8fbdc",
            "route_table_id": "rtb-0548f52e4ee64105f",
            "subnet_id": "subnet-0bd0211633dedea26"
          },
          "dependencies": [
            "aws_eip.eip_gtw_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.private_subnet3",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0463d691cfe284d45",
            "route_table_id": "rtb-0da8a0f349cc58c0c",
            "subnet_id": "subnet-04a78312f557cd77f"
          },
          "dependencies": [
            "aws_internet_gateway.int_gtw",
            "aws_route_table.rou_tab",
            "aws_subnet.public_subnet1",
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:security-group/sg-0d749d0e6da042bb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d749d0e6da042bb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230722220218607100000002",
            "name_prefix": "terraform-",
            "owner_id": "467283722999",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "alb-sg",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:security-group/sg-01e61384fd1efe76a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e61384fd1efe76a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "CapstoneSecurityGroup",
            "name_prefix": "",
            "owner_id": "467283722999",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CapstoneSecurityGroup"
            },
            "tags_all": {
              "Name": "CapstoneSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:subnet/subnet-09295bbb3697fccb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09295bbb3697fccb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467283722999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CapstonePrivateSubnet1"
            },
            "tags_all": {
              "Name": "CapstonePrivateSubnet1"
            },
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:subnet/subnet-0bd0211633dedea26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd0211633dedea26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467283722999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CapstonePrivateSubnet2"
            },
            "tags_all": {
              "Name": "CapstonePrivateSubnet2"
            },
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:subnet/subnet-081bbc834cf195ab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081bbc834cf195ab9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467283722999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CapstonePrivateSubnet3"
            },
            "tags_all": {
              "Name": "CapstonePrivateSubnet3"
            },
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:subnet/subnet-04a78312f557cd77f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a78312f557cd77f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467283722999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CapstonePublicSubnet"
            },
            "tags_all": {
              "Name": "CapstonePublicSubnet"
            },
            "vpc_id": "vpc-0d716f56ee76cd239"
          },
          "dependencies": [
            "aws_vpc.demoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demoVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467283722999:vpc/vpc-0d716f56ee76cd239",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02285aa90df7b2e6c",
            "default_route_table_id": "rtb-03d25c715ee721492",
            "default_security_group_id": "sg-08ab0239fa651884c",
            "dhcp_options_id": "dopt-0857effa1481d0048",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d716f56ee76cd239",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d25c715ee721492",
            "owner_id": "467283722999",
            "tags": {
              "Name": "CapstoneVPC"
            },
            "tags_all": {
              "Name": "CapstoneVPC"
            }
          }
        }
      ]
    }
  ]
}